--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <hr size="3" noshade="0">
             <table width="100%">
                 <tr>
-                    <td rowspan="3" width="220" align="center"><img align="center" src="../Images/perfil.jpg" width="200" height="266"></td>
+                    <td rowspan="3" width="220" align="center"><img align="center" src="Images/perfil.jpg" width="200" height="266"></td>
                     <td align="center"><h1>Felipe Velame</h1></td>
                 </tr>
                 <tr>
