--- a/contact_me.html
+++ b/contact_me.html
@@ -38,6 +38,6 @@
             </tr>
     </table>
     </form>
-    <div><a href="html_101.html">Return to Main Page</a></div>
+    <div><a href="index.html">Return to Main Page</a></div>
 </body>
 </html>
