--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>ᚩ℣ Felipe's Website</title>
+        <link rel="stylesheet" href="../CSS/styles.css">
     </head>
     <body>
         <center>
-            <hr size="3" noshade="0">
             <table width="100%">
                 <tr>
-                    <td rowspan="3" width="220" align="center"><img align="center" src="Images/perfil.jpg" width="200" height="266"></td>
-                    <td align="center"><h1>Felipe Velame</h1></td>
+                    <td rowspan="3" width="160" align="center"><img align="center" src="../Images/perfil2.jpg" width="150" height="140"></td>
+                    <td><h1>Felipe Velame</h1></td>
                 </tr>
                 <tr>
-                    <td align="center"><h4><em>Partner at FTV - Advocacia e Consultoria</em></h4></td>
+                    <td><h4><em>Partner at FTV - Advocacia e Consultoria</em></h4></td>
                 </tr>
                 <tr>
-                    <td align="center"><p>I'm a partner at the law Firm FTV - Advocacia e Consultoria, but I'm currently studying to make a career shift into software development, with ideas to become a Full-Stack developer.</p></td>
+                    <td><p>I'm a partner at the law Firm FTV - Advocacia e Consultoria, but I'm currently studying to make a career shift into software development, with ideas to become a Full-Stack developer.</p></td>
                 </tr>
         </table>
             <hr size="3" noshade="0">
@@ -27,7 +27,7 @@
                 <li>Taking the Complete 2022 Web Development Bootcamp at Udemy</li>
                 <li>Taking the 100 Days of Code - The Complete Python Pro Bootcamp at Udemy</li>
             </ul>
-        <hr size="2" noshade="0">
+        <hr size="3" noshade="0">
         <h3>Work Experience</h3>
         <table cellspacing="10">
             <tr>
@@ -41,7 +41,7 @@
                 <td>2017-present</td>
                 <td>Partner at FTV - Advocacia e Consultoria</td>
         </table>
-        <hr size="2" noshade="0">
+        <hr size="3" noshade="0">
         <h3>Skills</h3>
         <table cellspacing="10">
             <tr>
@@ -57,7 +57,7 @@
                 <td>Pending</td>
             </tr>
         </table>
-        <hr size="2" noshade="0">
+        <hr size="3" noshade="0">
             <h3>Hobbies</h3>
             <ol>
                 <li>Reading</li>
@@ -65,7 +65,7 @@
                 <li>Watching tv shows</li>
                 <li>Watching sports</li>
             </ol>
-        <hr size="2" noshade="0">
+        <hr size="3" noshade="0">
         <h3>Links</h3>
         <ul>
             <li><a href="https://twitter.com/felipe_velame">Twitter Profile</a></li>
