Adding the CSS External Style Sheet

--- a/contact_me.html
+++ b/contact_me.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>ᚩ℣ Contact Me!</title>
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
-<body>
+<body style="background-color: #DEE3E2; color: black;">
     <table>
         <th align="center">Personal Information</th>
         <tr>
