--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>ᚩ℣ Felipe's Website</title>
-        <link rel="stylesheet" href="../CSS/styles.css">
+        <link rel="stylesheet" href="CSS/styles.css">
     </head>
     <body>
         <center>
             <table width="100%">
                 <tr>
-                    <td rowspan="3" width="160" align="center"><img align="center" src="../Images/perfil2.jpg" width="150" height="140"></td>
+                    <td rowspan="3" width="160" align="center"><img align="center" src="Images/perfil2.jpg" width="150" height="140"></td>
                     <td><h1>Felipe Velame</h1></td>
                 </tr>
                 <tr>
