--- a/contact_me.html
+++ b/contact_me.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ᚩ℣ Contact Me!</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body style="background-color: #DEE3E2; color: black;">
     <table>
